--- a/style.css
+++ b/style.css
@@ -5,29 +5,31 @@ body{
 .parent{
     color: aliceblue;
     font-size: 2rem;
-    height: 200px;
     background-color: rgb(221, 160, 221, .5);
-    padding: 50px;
+    padding: 10px;
     text-align: center;
+    position: relative;
 }
 
-/* .child-1{
-    background-color: rgb(30, 210, 30);
-    height: 50px;
-} */
 
 .parent div:nth-child(1){
     background-color: rgb(30, 210, 30);
-    height: 50px;
+    padding: 50px;
     
 }
 .parent div:nth-child(2){
-    background-color: rgb(154, 11, 99);
-    height: 50px;
-    /* position: ; */
+    color: black;
+    background-color: rgb(232, 224, 229);
+    padding: 10px;
+    position: absolute;
+    top: 40%;
+    bottom: 40%;
+    left: 5%;
+    right: 5%;
+    box-shadow: 0px 15px 20px rgba(70, 70, 70, 0.5);
 }
 .parent div:nth-child(3){
     background-color: rgb(78, 30, 210);
-    height: 50px;
+    padding: 50px;
 }
 
