--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ body{
     position: absolute;
     top: 40%;
     bottom: 40%;
-    left: 5%;
-    right: 5%;
+    left: 2%;
+    right: 2%;
     box-shadow: 0px 15px 20px rgba(70, 70, 70, 0.5);
 }
 .parent div:nth-child(3){
@@ -33,3 +33,20 @@ body{
     padding: 50px;
 }
 
+
+.socials{
+    font-size: 2rem;
+    background: #000;
+    padding: 10px;
+    width: 50px;
+    text-align: center;
+    
+    
+}
+
+a{
+    color: #fff;
+    text-decoration: none;
+    position: fixed;
+    bottom: 5%;
+}
