--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 
 
 .parent div:nth-child(1){
-    background-color: rgb(30, 210, 30);
+    background-color: rgb(7, 25, 7);
     padding: 50px;
     
 }
@@ -29,19 +29,16 @@ body{
     box-shadow: 0px 15px 20px rgba(70, 70, 70, 0.5);
 }
 .parent div:nth-child(3){
-    background-color: rgb(78, 30, 210);
+    background-color: rgb(78, 30, 210,0.5);
     padding: 50px;
 }
-
 
 .socials{
     font-size: 2rem;
     background: #000;
     padding: 10px;
     width: 50px;
-    text-align: center;
-    
-    
+    text-align: center;  
 }
 
 a{
@@ -49,4 +46,12 @@ a{
     text-decoration: none;
     position: fixed;
     bottom: 5%;
+}
+
+.test{
+    background: rgba(194, 142, 239, 0.5);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    padding: 20px;
 }
